Add io manipulators to read/write binary values of unsinged short, unsigned long and std::string values.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,5 @@ else (DOXYGEN_FOUND)
 endif (DOXYGEN_FOUND)
 
 add_executable(ServerTest serverTest.cpp socket.h server.h)
+
+add_executable(ManipTest iomanip.h manipTest.cpp)
