Add name_tyat_type helper development class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,6 @@ else (DOXYGEN_FOUND)
     message("Doxygen needs to be installed to generate the doxygen documentation")
 endif (DOXYGEN_FOUND)
 
-add_executable(ServerTest serverTest.cpp socket.h server.h)
+add_executable(ServerTest serverTest.cpp socket.h server.h name_that_type.h)
 
-add_executable(ManipTest iomanip.h manipTest.cpp)
+add_executable(ManipTest iomanip.h manipTest.cpp name_that_type.h)
