Add asynchronous server test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(EzNetwork)
 
 set(CMAKE_CXX_STANDARD 17)
 
+find_package (Threads)
+
 # check if Doxygen is installed
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
@@ -26,3 +28,7 @@ endif (DOXYGEN_FOUND)
 add_executable(ServerTest serverTest.cpp socket.h server.h name_that_type.h)
 
 add_executable(ManipTest iomanip.h manipTest.cpp name_that_type.h)
+
+add_executable(AsyncServer asyncServerTest.cpp socket.h server.h name_that_type.h)
+
+target_link_libraries (AsyncServer ${CMAKE_THREAD_LIBS_INIT})
